# federated_test_server

./: .gitignore  README.md  index.js  package-lock.json  package.json
docs/: diagram.drawio
flower/: DEEV_Strategy.py  pyproject.toml  server.py  server_utils.py
public/: styles.css
server/: DEEV_Strategy.py  Utils.py  log.txt  pyproject.toml  requirements.txt  run.sh  server.py  server_utils.py
views/: index.ejs
web/: index.js  package-lock.json  package.json  run.sh  start.sh
web/config/: algorithms.json
web/public/: api.js  config.js  styles.css  utils.js
web/public/flower/: flower.js
web/utils/: consts.js  utils.js
web/views/: index.ejs
