[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Federated learning HAR"
version = "0.1.0"
description = "HAR federated learning using Flower"
authors = ["H.IAAC - Hub of Artificial Intelligence and Cognitive Architectures - University of Campinas - <https://github.com/H-IAAC/federated_test_server>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flwr = "1.8.0"
grpcio = "1.64.0"
tensorflow-cpu = { version = "2.14.0", markers = "platform_machine == \"x86_64\"" }
flask = "^2.2.2"
flask-cors = "3.0.10"
logging = "^0.4.9.6"
