[build-system]
requires = [
	"poetry-core>=1.4.0"
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Federated learning HAR"
version = "0.1.0"
description = "HAR federated learning using Flower"
authors = ["H.IAAC - Hub of Artificial Intelligence and Cognitive Architectures - University of Campinas - <https://github.com/H-IAAC/federated_test_server>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = "1.0.0"
Werkzeug = "2.2.2"
flask = "2.2.2"
flask-cors = "3.0.10"
grpcio = "1.43.0"
tensorflow = "2.11"
tensorboard = "2.11"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
